--- a/website/src/app/views/our-work/OurWork.css
+++ b/website/src/app/views/our-work/OurWork.css
@@ -9,7 +9,7 @@ html {
   max-height: 600px;
 }
 
-.upcoming-projects {
+.upcoming-projects-title {
   font-style: normal;
   font-weight: bold;
   font-size: 40px;
@@ -26,47 +26,104 @@ html {
   line-height: 22px;
 }
 
+.projects {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
 #middle-our-work {
+    /* height:100vh; */
+    max-width: 2000px;
+    margin: 40px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 100px 0 150px 0;
+    position: relative;
+    background:
+      url('../../../images/ourWork/solid-red-1.svg'), 
+      url('../../../images/ourWork/clear-red-1.svg'),
+      url('../../../images/ourWork/solid-red-2.svg'),
+      url('../../../images/ourWork/clear-red-2.svg'),
+      url('../../../images/ourWork/solid-red-3.svg'),
+      url('../../../images/ourWork/clear-red-3.svg'),
+      url('../../../images/ourWork/solid-red-4.svg'),
+      url('../../../images/ourWork/clear-red-4.svg'),
+      url('../../../images/ourWork/solid-red-5.svg'),
+      url('../../../images/ourWork/clear-red-5.svg'),
+      url('../../../images/ourWork/solid-red-6.svg'),
+      url('../../../images/ourWork/clear-red-6.svg');
+    background-position: 
+      10% 5%, calc(10% - 100px) calc(5% + 50px), 
+      95% calc(5% + 25px), calc(95% - 50px) calc(5% - 50px), 
+      5% calc(50% + 20px), 5% 45%, 
+      calc(95% + 65px) calc(45% - 75px), calc(95% + 50px) calc(45% - 30px),
+      5% calc(75% + 20px), calc(10% + 30px) calc(90% - 30px),
+      calc(85% + 25px) calc(90% + 20px), calc(95% + 10px) calc(80% + 70px);
+    background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
+    background-size: 
+      170px, 
+      300px,
+      170px,
+      300px, 
+      170px, 
+      300px, 
+      170px, 
+      300px,
+      170px,
+      300px;
+}
+
+.past-projects-section {
+  /* height:100vh; */
   max-width: 2000px;
   margin: 40px auto;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-}
-
-.projects {
+  padding: 100px 0 150px 0;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-#middle-our-work{
-    /* height:100vh; */
-    padding: 100px 0 200px 0;
-    display: flex;
-    flex-direction: column;
-    justify-content:initial;
-    position: relative;
-    background:url('../../../images/ourWork/solid-1.svg'), url('../../../images/ourWork/clear-1.svg'),url('../../../images/ourWork/solid-2.svg'), url('../../../images/ourWork/clear-2.svg'),url('../../../images/ourWork/solid-3.svg'), url('../../../images/ourWork/clear-3.svg'),url('../../../images/ourWork/solid-4.svg'), url('../../../images/ourWork/clear-4.svg');
-    background-position: 
-        10% 5%, 
-        calc(10% - 100px) calc(5% + 50px), 
-        95% 20%, 
-        calc(95% - 50px) calc(20% - 50px), 
-        5% 90%, 
-        5% 90%, 
-        90% 90%, 
-        calc(90% - 0px) calc(90% + 70px);
-    background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
-    background-size: 
-        170px, 
-        300px,
-        170px,
-        300px, 
-        170px, 
-        300px, 
-        170px, 
-        300px;
+  flex-direction: column;
+  justify-content: space-evenly;
+  position: relative;
+  background:
+    url('../../../images/ourWork/solid-purple-1.svg'),
+    url('../../../images/ourWork/clear-purple-1.svg'),
+    url('../../../images/ourWork/solid-purple-2.svg'),
+    url('../../../images/ourWork/clear-purple-2.svg'),
+    url('../../../images/ourWork/solid-purple-3.svg'),
+    url('../../../images/ourWork/clear-purple-3.svg'),
+    url('../../../images/ourWork/solid-purple-4.svg'),
+    url('../../../images/ourWork/clear-purple-4.svg'),
+    url('../../../images/ourWork/solid-purple-5.svg'),
+    url('../../../images/ourWork/clear-purple-5.svg'),
+    url('../../../images/ourWork/solid-purple-6.svg'),
+    url('../../../images/ourWork/clear-purple-6.svg');
+  background-position: 
+    calc(5% - 15px) calc(15% + 10px), calc(10% - 50px) calc(5% + 30px), 
+    calc(90% + 35px) calc(15% - 25px), calc(95% + 5px) calc(10% - 25px),
+    calc(10% - 20px) 40%, 5% 45%, 
+    calc(95% - 25px) calc(40% + 20px), calc(95% + 50px) calc(45% - 30px), 
+    5% calc(80% - 20px), calc(5% + 25px) calc(75% + 20px), 
+    calc(90% - 30px) 75%, calc(95% - 20px) calc(75% + 55px);
+  background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
+  background-size: 
+    180px, 
+    260px,
+    220px,
+    220px, 
+    220px, 
+    220px, 
+    220px, 
+    260px,
+    180px,
+    220px,
+    180px,
+    220px;
 }
 
 /* Taking out triangle animations for now */
@@ -124,7 +181,7 @@ html {
 }
 
 @media only screen and (max-width: 1300px) {
-    #middle-our-work{
+    #middle-our-work {
         background-size: 
         130px, 
         200px,
@@ -133,24 +190,32 @@ html {
         130px, 
         200px,
         130px, 
+        200px,
+        130px,
+        200px,
+        130px,
         200px;
     }
-}
-    
-.past-project-section {
-  max-width: 2000px;
-  margin: 120px auto;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
+
+    .past-projects-section {
+        background-size: 
+        130px, 
+        160px,
+        145px, 
+        145px,
+        145px, 
+        145px,
+        145px, 
+        160px,
+        130px,
+        145px,
+        130px,
+        145px;
+    }
 }
 
-.past-project-div {
-  flex: 1;
-}
 
-.bottom-card-div {
+.past-project-div, .bottom-card-div {
   flex: 1;
 }
 
@@ -161,7 +226,7 @@ html {
 }
 
 @media screen and (min-width:2100px) {
-  .upcoming-projects {
+  .upcoming-projects-title {
     margin: 3%;
   }
 }
@@ -172,7 +237,7 @@ html {
         flex-direction: column;
     }
 
-    #middle-our-work {
+    #middle-our-work, .past-projects-section {
         height: auto;
         background-image:none;
     }
@@ -183,11 +248,13 @@ html {
   float: right;
 }
 
-.past-project-title {
+.past-projects-title {
   font-style: normal;
   font-weight: bold;
   font-size: 40px;
   line-height: 40px;
+  margin: 50px;
+  text-align: center;
   color: var(--dark-purple);
   text-shadow: 1px 0 var(--dark-purple)
 }
@@ -204,18 +271,18 @@ html {
     margin: 0 auto;
   }
 
-  #middle-our-work {
+  #middle-our-work, .past-projects-section {
     height: auto;
     padding: 0;
   }
 
-  .past-project-section {
+  .past-projects-section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
 
-  .upcoming-projects {
+  .upcoming-projects-title {
     margin-top: 15vh;
     font-size: 28px;
   }
@@ -237,7 +304,7 @@ html {
     margin: 0 auto;
   }
 
-  .past-project-title {
+  .past-projects-title {
     margin-top: 50px;
     font-size: 28px;
     text-align: center;
