--- a/website/src/styles/common.css
+++ b/website/src/styles/common.css
@@ -6,12 +6,14 @@ Commit the Change website environment styles.
 
 /* Montserrat Font */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap'); */
 
 /* Source Code Pro for timeline */
 @import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap");
 
 /* Secondary and Accent Colors */
 :root {
+  --darkest-purple: #481DAB;
   --dark-purple: #6331d8;
   --light-purple: #bea9ef;
   --orange: #fc5d03;
