--- a/website/src/app/views/apply/Apply.css
+++ b/website/src/app/views/apply/Apply.css
@@ -359,7 +359,7 @@ html {
 
 .ctc-apply-5-bg {
   width: 100%;
-  height: 1200px;
+  height: calc(1000px + 10vw + 10vh);
   background-color: white;
   position: relative;
   z-index: 1;
