--- a/website/src/app/views/apply/Apply.css
+++ b/website/src/app/views/apply/Apply.css
@@ -76,17 +76,9 @@ html {
   margin-top: 0px;
 }
 
-.ctc-apply-1-overlay {
-  position: absolute;
-  width: 100%;
-  height: 55%;
-  top: 60px;
-  background: rgba(0, 0, 0, 0.5);
-}
-
 .ctc-apply-1-bg {
   width: 100vw;
-  height: 70%;
+  height: clamp(1000px, 70%, 70%);
   background-image: url("../../../images/apply/join.jpg");
   background-color: rgba(24, 9, 58, 0.3);
   background-blend-mode: multiply;
