--- a/website/src/app/views/about/About.css
+++ b/website/src/app/views/about/About.css
@@ -5,7 +5,8 @@
   min-height: 100%;
   height: 100vh;
   width: 100vw;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .about-footer.about-footer {
