--- a/website/src/app/views/apply/Apply.css
+++ b/website/src/app/views/apply/Apply.css
@@ -63,7 +63,8 @@ html {
   min-height: 100%;
   height: 100vh;
   width: 100vw;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .ctc-apply-email-link {
