--- a/website/src/app/views/contact-us/ContactUs.css
+++ b/website/src/app/views/contact-us/ContactUs.css
@@ -6,7 +6,8 @@
   min-height: 100%;
   height: 100vh;
   width: 100%;
-  overflow: visible;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .ctc-contact-container {
