--- a/website/src/app/views/home/Home.css
+++ b/website/src/app/views/home/Home.css
@@ -10,7 +10,8 @@
   min-height: 100%;
   height: 100vh;
   width: 100vw;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .ctc-home-1-bg {
