--- a/website/src/app/views/our-team/OurTeam.css
+++ b/website/src/app/views/our-team/OurTeam.css
@@ -5,7 +5,8 @@
   min-height: 100%;
   height: 100vh;
   width: 100%;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
   -webkit-overflow-scrolling: touch;
 }
 
@@ -42,8 +43,8 @@
   border-radius: 10px;
   text-align: center;
   margin: 0 25px;
-  min-width: 60px;
-  padding: 4px 5%;
+  min-width: 150px;
+  padding: 4px 2%;
   font-size: 16px;
   line-height: 24px;
   cursor: pointer;
