--- a/website/src/app/views/our-work/OurWork.css
+++ b/website/src/app/views/our-work/OurWork.css
@@ -8,7 +8,8 @@ html {
   background-color: white;
   min-height: 100%;
   height: 100vh;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .ourwork-footer.ourwork-footer {
