--- a/website/src/app/components/Footer/Footer.css
+++ b/website/src/app/components/Footer/Footer.css
@@ -33,6 +33,12 @@
   font-size: 16px;
   line-height: 24px;
   font-weight: 300;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
 }
 
 .inner-left {
@@ -54,6 +60,12 @@
   width: 100px;
   height: auto;
   padding-bottom: 10px;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
 }
 
 .middle-column h2 {
