--- a/website/src/app/views/our-team/OurTeam.css
+++ b/website/src/app/views/our-team/OurTeam.css
@@ -105,6 +105,12 @@
   position: relative;
   bottom: 144.2%;
   z-index: 2;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
 }
 
 .ctc-ourteam-card-link {
@@ -117,6 +123,12 @@
   border-radius: 20px;
   width: 100%;
   height: 260px;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
 }
 
 .ctc-ourteam-card-bottom-row {
@@ -133,6 +145,12 @@
   padding-bottom: 5px;
   bottom: 4.4%;
   z-index: 5;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
 }
 
 .ctc-ourteam-card-name {
