--- a/website/src/app/views/our-work/OurWork.css
+++ b/website/src/app/views/our-work/OurWork.css
@@ -207,4 +207,25 @@ html {
     margin-left: -15px;
     margin-bottom: 50px;
   }
+  .ctc-ourwork-past-projects-card {
+    height: 400px;
+    min-width: 320px;
+    border-radius: 5px;
+    margin: 30px 5px 50px 30px;
+    background-color: white;
+    box-shadow: 0px 4px 15px rgba(237, 49, 93, 0.3);
+  }
+  .ctc-ourwork-past-projects-card-name {
+    font-size: 24px;
+  }
+  .ctc-ourwork-past-projects-card-timeline {
+    font-size: 18px;
+  }
+  .ctc-ourwork-past-projects-card-img-container {
+    height: 100px;
+    padding-bottom: 10px;
+  }
+  .ctc-ourwork-past-projects-card-text {
+    padding: 0 22px;
+  }
 }
