[F2022] Post Dev Bootcamp Updates (#357)
- Update to React 18 + ReactDOM 6 + bump other dependencies
- Add Redirect component and refactor Discord link to use this component
- Add redirect to homepage on 404
- Add member info for 2022-23 devs/designers
- Revise eslintrc to avoid local webpack compile issues

Co-authored-by: Caroline Nguyen <74521024+carolibn@users.noreply.github.com>
Co-authored-by: ThatMegamind <92563733+ThatMegamind@users.noreply.github.com>
Co-authored-by: ctc-devops <90984711+ctc-devops@users.noreply.github.com>
Co-authored-by: Kei Asakawa <77090883+Kaiyooon@users.noreply.github.com>
Co-authored-by: Avent Chiu <65209258+sirAvent@users.noreply.github.com>
Co-authored-by: leeaj8-uci <leeaj8@uci.edu>
Co-authored-by: evanpservito <78441979+evanpservito@users.noreply.github.com>
Co-authored-by: Arjun Sivakumar <arjunsvkmr@gmail.com>
Co-authored-by: “Michelle <itsmichellelin@gmail.com>
Co-authored-by: NwinNwin <ndnguyen2003@gmail.com>
Co-authored-by: Dang Nguyen Nguyen <93059380+NwinNwin@users.noreply.github.com>
Co-authored-by: Subin Kim <subinlk@uci.edu>
Co-authored-by: Orviel Alzate <92621196+orvielalz@users.noreply.github.com>
Co-authored-by: Kade Na <kadejna@gmail.com>
Co-authored-by: echen <58098646+eachen1010@users.noreply.github.com>
Co-authored-by: RaymondYan38 <raymondyan17@gmail.com>
Co-authored-by: RaymondYan38 <94600273+RaymondYan38@users.noreply.github.com>
Co-authored-by: joshualipton <jalipton11@gmail.com>
Co-authored-by: michellelin1 <michellelin810@gmail.com>
Co-authored-by: kristenyee <66435886+kristenyee@users.noreply.github.com>
Co-authored-by: kristenyee <kcyee07@gmail.com>
Co-authored-by: michellelin1 <66575725+michellelin1@users.noreply.github.com>
Co-authored-by: liannejl <91288901+liannejl@users.noreply.github.com>
Co-authored-by: Rochelle Nixon <76502407+rochellenixon@users.noreply.github.com>
Co-authored-by: Rochelle Nixon <rochelln@uci.edu>
Co-authored-by: Rachel <ravillamor23@gmail.com>
Co-

--- a/website/src/app/views/our-team/OurTeam.css
+++ b/website/src/app/views/our-team/OurTeam.css
@@ -113,6 +113,10 @@
   user-select: none;
 }
 
+.no-linkedin-overlay {
+  bottom: 138.5%;
+}
+
 .ctc-ourteam-card-link {
   text-decoration: none;
   color: white;
