Fix more mobile scrolling, add globe alt img for non-Linkedin websites, fix RMA manifest

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,6 +1,6 @@
 @import "styles/common.css";
 
-.page-container {
+/* .page-container {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -16,4 +16,4 @@
     min-width: 270px;
     height: auto;
   }
-}
+} */
