--- a/website/src/app/components/Footer/Footer.css
+++ b/website/src/app/components/Footer/Footer.css
@@ -6,7 +6,7 @@
   bottom: 0;
   width: 100%;
   padding: 25px 0;
-  background-color: #481dab;
+  background-color: var(--dark-purple);
   color: white;
   border-top: 1px solid white;
   z-index: 10;
