--- a/website/src/app/views/apply/Apply.css
+++ b/website/src/app/views/apply/Apply.css
@@ -10,8 +10,8 @@ html {
   border-radius: 9px;
   margin: 30px 35px 40px 35px;
   padding: 20px;
-  background-color: #c0abf2;
-  filter: drop-shadow(0 5px 8px #aaa);
+  background-color: var(--dark-purple);
+  box-shadow: 0px 4px 10px 3px rgba(25, 22, 30, 0.5);
 }
 
 .t-card-img-container {
@@ -49,7 +49,7 @@ html {
 }
 
 .t-card-p {
-  text-align: center;
+  text-align: left;
   width: 88%;
   margin-left: 6%;
   padding-top: 2px;
