Make various visibility and accessibility improvements (#366)
## Changes Made
- Updated alt-text on all pages to improve accessibility
- Disabled animations when user prefers reduced motion
- Changed links to the same page to also scroll user to the top of the page
- Updated text on the 'Projects' page
- Updated CTC's portfolio
- Other visual changes based on designer feedback
---------

Co-authored-by: jrock03 <liaojy2@uci.edu>

--- a/website/src/app/components/Question/Question.css
+++ b/website/src/app/components/Question/Question.css
@@ -41,10 +41,38 @@
 }
 
 .expand-symbol {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
   font-size: 36px;
-  margin-top: 2px;
-  margin-left: 8px;
   color: var(--dark-pink);
+  text-align: center;
+}
+
+.expand-symbol-hidden{
+  opacity: 0;
+  transition: 0.2s;
+}
+
+.expand-symbol-shown{
+  opacity: 1;
+  transition: 0.2s;
+}
+
+
+@media (prefers-reduced-motion: no-preference) {  
+  .expand-symbol-hidden{
+    opacity: 0;
+    transform: rotate(-45deg);
+    transition: 0.15s;
+    transition-timing-function: cubic-bezier(.57,-1.1,.58,2.04);
+  }
+
+  .expand-symbol-shown{
+    opacity: 1;
+    transition: 0.175s;
+  }
 }
 
 .top-half {
@@ -77,6 +105,7 @@
   font-size: 36px;
   transform: translate(4px, 1px);
 }
+
 
 @media screen and (max-width: 1100px) {
   .question-card {
