--- a/website/src/app/views/our-work/OurWork.css
+++ b/website/src/app/views/our-work/OurWork.css
@@ -12,6 +12,10 @@ html {
   overflow-y: auto;
 }
 
+.current-projects{
+  margin-top: 2rem;
+}
+
 .ourwork-footer.ourwork-footer {
   position: static;
   margin-top: 40px;
@@ -39,24 +43,16 @@ html {
   font-weight: 600;
   line-height: 48px;
   color: var(--dark-pink);
-  margin: 20px 0 20px 150px;
+  margin: 20px 0;
+  text-align: center;
 }
 
 .ctc-ourwork-current-projects {
-  width: calc(100vw - 300px);
+  width: 80vw;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.ctc-ourwork-current-projects .project-card {
-  flex: 0 0 calc(50% - 60px);
-  border-radius: 20px;
-  width: 50%;
-  margin: 0 30px 60px 30px;
-  min-height: 200px;
+  justify-content: space-evenly;
+  align-items: stretch;
+  padding-bottom: 4.31rem;
 }
 
 .ctc-ourwork-past-projects {
@@ -166,6 +162,10 @@ html {
 }
 
 @media screen and (max-width: 1200px) {
+  .current-projects{
+    margin-top: 4rem;
+  }
+
   .ctc-ourwork-header {
     font-size: 32px;
     line-height: 48px;
@@ -175,13 +175,6 @@ html {
   .ctc-ourwork-current-projects {
     width: 90%;
     justify-content: center;
-  }
-  .ctc-ourwork-current-projects .project-card {
-    flex: 0 0 90%;
-    border-radius: 20px;
-    margin-left: 7.5%;
-    margin-bottom: 40px;
-    min-height: 200px;
   }
   .ctc-ourwork-past-projects-header {
     text-align: center;
@@ -199,13 +192,6 @@ html {
 }
 
 @media screen and (max-width: 600px) {
-  .ctc-ourwork-current-projects .project-card {
-    flex: 0 0 95%;
-    border-radius: 20px;
-    width: 95%;
-    margin-left: 2.5%;
-    margin-right: 2.5%;
-  }
   .ctc-ourwork-past-projects {
     width: 95%;
     margin-top: 0px;
