--- a/website/src/app/components/ProjectCard/ProjectCard.css
+++ b/website/src/app/components/ProjectCard/ProjectCard.css
@@ -1,20 +1,39 @@
 .project-card {
-  box-shadow: 0px 4px 15px rgba(237, 49, 93, 0.19);
-  border-radius: 20px;
-  width: calc((100vw - 350px) / 2);
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.20); 
+  border-radius: 0.5rem;
   min-height: 400px;
   position: relative;
   background-color: white;
+  width: calc((100vw - 100px) / 3);
+  width: max(40ch, 20vw);
+  max-width: 80vw;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+  padding-bottom: 3.0rem;
 }
 
 .project-card-text {
   font-family: Inter;
-  max-height: 300px;
-  padding: 20px 30px;
+  padding: 1.25rem 1.25rem;
 }
 
-.project-card-arrow-up-right {
-  margin-left: 10px;
+.primary-button {
+  background-color: var(--darkest-purple);
+  color: white;
+  border: 0;
+  border-radius: 0.2rem; 
+  padding: 0.375rem 1.25rem; 
+  text-decoration: none;
+}
+
+.project-card .primary-button {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  margin: 1.25rem;
 }
 
 .project-timeline {
@@ -25,10 +44,9 @@
 .project-name {
   display: flex;
   align-items: center;
-
   font-style: normal;
   font-weight: 600;
-  font-size: 24px;
+  font-size: 1.5rem;
   line-height: 29px;
   color: black;
   text-decoration: none;
@@ -43,27 +61,19 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 400px;
+  height: 15rem;
   width: 100%;
   /* background-image: url(https://static-koimoi.akamaized.net/wp-content/new-galleries/2022/08/the-batman-2-starring-robert-pattison-is-yet-to-be-greenlit-001.jpg); */
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-}
-
-.project-card-image-div a {
-  height: 100%;
-  width: 100%;
-  text-align: center;
-  display: flex;
+  border-top-right-radius: 0.5rem;
+  border-top-left-radius: 0.5rem;
 }
 
 .project-card-image {
-  margin: auto;
-  width: 100%;
-  height: 100%;
+  height: 80%;
+  width: auto;
 }
 
 .upcoming-project-card-image:hover {
@@ -90,42 +100,8 @@ p:hover > .project-off {
   color: var(--dark-pink);
 }
 
-@media screen and (max-width: 1450px) {
-  .project-card-more {
-    bottom: 0;
-  }
-}
-
-@media screen and (max-width: 900px) {
-  .project-card {
-    margin: 15px;
-    height: 420px !important;
-    min-width: 0px;
-    max-width: unset;
-    flex-basis: unset;
-  }
-
-  .project-name {
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 29px;
-  }
-
-  .description {
-    font-size: 14px;
-    line-height: 20px;
-    width: 85%;
-  }
-
-  .project-card-more {
-    font-size: 16px;
-  }
-
+@media screen and (max-width: 900px) { 
   .project-card-image-div {
-    display: flex;
-    align-items: center;
-    height: 220px;
-    width: 100%;
+    height: 12.5rem;
   }
 }
