--- a/website/src/app/components/Question/Question.css
+++ b/website/src/app/components/Question/Question.css
@@ -51,27 +51,51 @@
 }
 
 .expand-symbol-hidden{
+  transform: rotate(180deg);
   opacity: 0;
-  transition: 0.2s;
+  transition: 0.25s;
+  transition-timing-function: cubic-bezier(.6,-1.3,.6,3.0);
 }
 
 .expand-symbol-shown{
   opacity: 1;
-  transition: 0.2s;
+  transition: 0.25s;
 }
 
+.expand-text-hidden{
+  max-height: 0;
+  opacity: 0;
+  transition: 0.08s ease-out;
+  overflow: hidden;
+}
 
-@media (prefers-reduced-motion: no-preference) {  
+.expand-text-shown{
+  max-height: 2000px;
+  opacity: 1;
+  transition: 0.08s ease-in;
+}
+
+@media (prefers-reduced-motion) {  
   .expand-symbol-hidden{
-    transform: rotate(-90deg);
     opacity: 0;
-    transition: 0.225s;
-    transition-timing-function: cubic-bezier(.6,-1.3,.6,3.0);
+    transition: 0;
   }
 
   .expand-symbol-shown{
     opacity: 1;
-    transition: 0.25s;
+    transition: 0;
+  }
+
+  .expand-text-shown{
+    max-height: 100rem;
+    opacity: 1;
+    transition: 0;
+
+  }
+  .expand-text-hidden{
+    max-height: 0;
+    opacity: 0;
+    transition: 0;
   }
 }
 
@@ -114,7 +138,6 @@
   .expand-symbol {
     font-size: 30px;
     margin-top: 3px;
-    margin-left: 12px;
     color: var(--dark-pink);
   }
   .top-half .question-text {
@@ -128,9 +151,9 @@
 }
 
 @media screen and (max-width: 850px) {
-  .symbol {
+  /* .symbol {
     flex: 0 0 40px;
-  }
+  } */
 
   .faq-title {
     font-size: 36px;
