--- a/website/src/app/views/home/Home.css
+++ b/website/src/app/views/home/Home.css
@@ -212,9 +212,11 @@
 }
 
 .ctc-home-3-bg {
-  height: 550px;  /* TEMPORARY: 850px */
+  height: auto;  /* TEMPORARY: 850px */
   background-color: #ffeff3;
-  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .ctc-home-3-header {
@@ -227,25 +229,16 @@
 }
 
 .ctc-home-3-projects-container {
-  width: 92%;
-  margin-left: 4%;
+  width: 80%;
   height: auto; /* TEMPORARY 450px */
   display: flex;
-  justify-content: center; /* TEMPORARY space-between; */
-}
-
-.ctc-home-3-projects-container .project-card {
-  width: calc((100vw - 100px) / 3);
-  height: 500px;
-  margin-left: 30px;
-  margin-right: 30px;
-}
-
-.ctc-home-3-projects-container .project-card .project-card-image-div {
-  height: 300px;
+  gap: 5.8125rem; 
+  justify-content: space-evenly;
+  align-items: stretch;
 }
 
 .ctc-home-3-buttons {
+  position: block;
   display: flex;
   justify-content: center;
   margin-top: 80px; /* TEMPORARY: 120px */
@@ -268,12 +261,6 @@
   padding: 7px 40px;
   border-radius: 3px;
   display: inline;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  -o-user-select: none;
-  user-select: none; 
 }
 
 .ctc-home-4-bg {
@@ -783,6 +770,7 @@
   align-items: space-between;
   padding: 5px 15px;
   margin-bottom: 20px;
+  align-self: center;
 }
 
 .ctc-ourwork-comingsoon-p {
