--- a/website/src/app/components/ProjectCard/ProjectCard.css
+++ b/website/src/app/components/ProjectCard/ProjectCard.css
@@ -20,15 +20,6 @@
   padding: 1.25rem 1.25rem;
 }
 
-.primary-button {
-  background-color: var(--darkest-purple);
-  color: white;
-  border: 0;
-  border-radius: 0.2rem; 
-  padding: 0.375rem 1.25rem; 
-  text-decoration: none;
-}
-
 .project-card .primary-button {
   position: absolute;
   left: 0;
@@ -69,6 +60,15 @@
   background-repeat: no-repeat;
   border-top-right-radius: 0.5rem;
   border-top-left-radius: 0.5rem;
+  overflow: hidden;
+}
+
+.project-card-link{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .project-card-image {
