--- a/website/src/styles/common.css
+++ b/website/src/styles/common.css
@@ -68,6 +68,31 @@ Commit the Change website environment styles.
   background-color: var(--light-pink);
 }
 
+.primary-button {
+  background-color: var(--darkest-purple);
+  color: white;
+  border: 0;
+  padding: 0.375rem 1.25rem; 
+  text-decoration: none;
+}
+.primary-button:hover {
+  background-color: var(--dark-purple);
+  transition: 0.1s;
+}
+
+
+.secondary-button {
+  background-color: white;
+  color: var(--darkest-purple);
+  border: 1px solid var(--darkest-purple);
+  padding: 0.375em 1.25em; 
+  text-decoration: none;
+}
+.secondary-button:hover {
+  background-color: var(--light-purple);
+  transition: 0.1s;
+}
+
 /* .common-button {
   border-radius: 4px;
   font-size: 18px;
