--- a/src/app/views/our-work/CSE/CSEAbout.css
+++ b/src/app/views/our-work/CSE/CSEAbout.css
@@ -1,11 +1,102 @@
 .about-us-page-container {
-    padding-top: 4rem;
-    padding-bottom: 20rem;
-    background-color: white;
-    overflow-x: hidden;
-    position: relative;
+  padding-top: 10vh;
+  padding-bottom: 20rem;
+  overflow-x: hidden;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  padding-left: 13vw;
+  height: 600px;
+}
+
+.title {
+  font-family: Inter;
+  font-size: 32px;
+  font-weight: 400;
+  line-height: 38.73px;
+  text-align: left;
 }
 
 .about-us-page-container .footer {
-    height: 20rem;
+  height: 20rem;
+}
+.content {
+  position: relative;
+  display: flex;
+}
+.header-banner {
+  padding-top: 25px;
+  display: flex;
+  position: relative;
+  /* height: 5rem; */
+}
+.timeline {
+  position: absolute;
+  bottom: 0;
+  left: 5;
+  margin-bottom: 1rem;
+  margin-left: 1rem;
+  font-family: Source Code Pro;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20.11px;
+  text-align: left;
+}
+.heading {
+  margin-left: 1rem;
+}
+
+.heading-group {
+  display: flex;
+  height: fit-content;
+  align-items: center;
+  justify-content: center;
+}
+
+.heading-group button {
+  margin-left: 0.5rem;
+  height: 2rem;
+}
+
+.body {
+  font-family: Inter;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 27px;
+  text-align: left;
+}
+
+.header {
+  font-family: Inter;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 25px;
+  text-align: left;
+  display: flex;
+  align-items: center;
+  color: var(--Primary-purple, #481dab);
+}
+
+.about-us-content {
+  width: 660px;
+}
+.icon-header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.icon-header img {
+  margin-right: 0.5rem;
+}
+
+.triangle {
+  position: absolute;
+  width: 278.16px;
+  height: 236.99px;
+  top: 100px;
+  left: 800px;
+  gap: 0px;
+  opacity: 0px;
+  transform: rotate(92.26deg);
 }
